# PythTask

./: .gitignore  TABLE WITH points (Smirnov Vadim B05).xlsx
01.2.BasicTypes/filter_list_by_list/: filter_list_by_list.py
01.2.BasicTypes/fizz_buzz/: fizz_buzz.py
01.2.BasicTypes/iterate_me/: iterate_me.py
01.2.BasicTypes/make_assert/: make_assert.py
01.2.BasicTypes/merge_lists/: merge_lists.py
01.2.BasicTypes/middle_value_of_triple/: middle_value_of_triple.py
01.2.BasicTypes/reverse_list/: reverse_list.py
01.2.BasicTypesHard/bin_tricky/: bin_tricky.py
01.2.BasicTypesHard/common_type/: common_type.py
01.2.BasicTypesHard/common_type_2/: README.md  common_type_2.py
02.1.DataStructures/comprehensions/: comprehensions.py
02.1.DataStructures/merge_lists_2/: merge_lists.py
02.1.DataStructures/min_to_drop/: min_to_drop.py
02.1.DataStructures/reverse_dict/: reverse_dict.py
02.1.DataStructures/traverse_dictionary/: traverse_dictionary.py
02.1.DataStructuresHard/alphabet/: alphabet.py
02.1.DataStructuresHard/banner_search_system/: banner_search_system.py
02.1.DataStructuresHard/object_by_id/: object_by_id.py
03.1.FunctionsStringsIO/caesar_cipher/: caesar_cipher.py
03.1.FunctionsStringsIO/count_util/: count_util.py
03.1.FunctionsStringsIO/git_log/: git_log.py
03.1.FunctionsStringsIO/input_/: input_.py
03.1.FunctionsStringsIO/merge_lists_3/: merge_lists_3.py
06.1.ModulesPackagesImport/basic_module/: setup.cfg
nonzero_product/: nonzero_product.py
numpy_basic/: numpy_basic.py
password_manager.egg-info/: PKG-INFO  SOURCES.txt
(+30 files in other folders)
