[metadata]
name = password_manager
version = 0.1.0
author = Your Name
author_email = your.email@example.com
description = Simple password manager

[options]
packages = find:
install_requires =
python_requires = >=3.6

[options.entry_points]
console_scripts =
    password_manager = password_manager.__main__:main

[tool:pytest]
addopts = --cov=password_manager --cov-report=term-missing